# mate-2023-rnd

./: .gitignore  README.md  main.py  requirements.txt  utils.py
firmware/: .communications.md.swp  a.out  communications.md  compile_esc_software.sh  esc_software_pwm.c  esc_software_pwm.h  esc_software_pwm_singlethread.c  esc_software_test.py  pi_comms.py  pi_hardware.py  pi_server.py  rov-comms.py  rov_comms.py  thr_ctrl  udp_comms.c  udp_comms.h
firmware/arm-tube/: arm-tube.ino
firmware/bno_lib/: bno.py  bno_install.sh
firmware/can-passthrough/: can-passthrough.ino
firmware/main-tube/: main-tube.ino  thrusterControl.ino
firmware/v1/: rov_comms.py
firmware/v1/main-tube/: main-tube.ino
firmware/v2/: arm-tube
firmware/v2/main-tube/: esc_software_pwm_singlethread.c  udp_comms.c  udp_comms.h
firmware/v3/main-tube/: CMakeCache.txt  CMakeLists.txt  Makefile  bno055.c  bno055.h  build.sh  firmware.c  (+8 more)
firmware/v4/main-tube/: CMakeLists.txt  build.sh  firmware.c  firmware.h  utils.h
float/: code.py  index.html  peripherals.py
float/lib/: a4988.py
gui/: float.py  gui.py  rov.py  settings.json  utils.py
gui/cv/: seagrass.py
gui/frame/: info.py  menu.py  navigation.py  stopwatch.py  time.py
gui/sidebar/: chart.py  console.py  controls.py
gui/tabs/: camera.py  draw.py  settings.py
gui/widgets/: __init__.py  console.py
interface/: interface_utils.py  pi_comms.py
simulations/: pid_test_vpython.py  pid_utils.py  thruster_utils.py
vr/: vr-communications.md  vr-interface.py
vr/unity-vr/: app.config  packages.config  unityProject.vrmanifest
(+218 files in other folders)
